Scope map to NZ

--- a/Web/index.html
+++ b/Web/index.html
@@ -21,7 +21,10 @@
                 authOptions: {
                     authType: 'subscriptionKey',
                     subscriptionKey: 'vxbFjCskTaHyKTCHQO2cUbePz3ZUEXcxdkR6JJYNASw'
-                }
+                },
+                style: "night",
+                center: [171.7799, -40.838875],
+                zoom: 6
             });
         }
     </script>
