Add flight data api

--- a/Web/index-signalr.html
+++ b/Web/index-signalr.html
@@ -54,7 +54,7 @@
 
         }).catch(console.error)
 
-        function drawMap() {
+        function GetMap() {
             //Instantiate a map object
             map = new atlas.Map("myMap", {
                 //Add your Azure Maps subscription key to the map SDK. Get an Azure Maps key at https://azure.com/maps
@@ -143,7 +143,7 @@
     </style>
 </head>
 
-<body onload="drawMap()">
+<body onload="GetMap()">
     <div id="myMap"></div>
 </body>
 </html>
