--- a/Web/index.html
+++ b/Web/index.html
@@ -13,6 +13,9 @@
     <!-- Add a reference to the Azure Maps Services Module JavaScript file. -->
     <script src="https://atlas.microsoft.com/sdk/javascript/mapcontrol/2/atlas-service.min.js"></script>
 
+    <!-- Promis based http client. https://github.com/axios/axios -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script>
         function GetMap() {
             //Instantiate a map object
@@ -23,9 +26,55 @@
                     subscriptionKey: 'vxbFjCskTaHyKTCHQO2cUbePz3ZUEXcxdkR6JJYNASw'
                 },
                 style: "night",
-                center: [171.7799, -40.838875],
-                zoom: 6
+                center: [172.00, -40.00],
+                zoom: 5
             });
+
+            //Wait until the map resources are ready.
+            map.events.add('ready', function () {
+
+                map.imageSprite.add('plane-icon', 'https://dtazfuncdemogsa.blob.core.windows.net/dt-azfuncdemo-blob/plane.png');
+
+                //Create a data source and add it to the map
+                var datasource = new atlas.source.DataSource();
+                map.sources.add(datasource);
+
+                //Create a symbol layer using the data source and add it to the map
+                map.layers.add(
+                    new atlas.layer.SymbolLayer(datasource, null, {
+                        iconOptions: {
+                            ignorePlacement: true,
+                            allowOverlap: true,
+                            image: 'plane-icon',
+                            size: 0.08,
+                            rotation: ['get', 'rotation']
+                        },
+                        textOptions: {
+                            textField: ['concat', ['to-string', ['get', 'name']], '- ', ['get', 'altitude']],
+                            color: '#FFFFFF',
+                            offset: [2, 0]
+                        }
+                    })
+                );
+
+                GetFlightData().then(function (response) {
+                    for (var flight of response.data.states) {
+                        var pin = new atlas.Shape(new atlas.data.Point([flight[5], flight[6]]));
+                        pin.addProperty('name', flight[1]);
+                        pin.addProperty('altitude', flight[7]);
+                        pin.addProperty('rotation', flight[10]);
+                        datasource.add(pin);
+                    }
+                });
+
+            });
+        }
+
+        function GetFlightData() {
+            return axios.get('https://opensky-network.org/api/states/all?lamin=-50.00&lomin=160.00&lamax=-30.00&lomax=180.00')
+                .then(function (response) {
+                    return response;
+                }).catch(console.error)
         }
     </script>
 
