Add signalr functions

--- a/Web/index-signalr.html
+++ b/Web/index-signalr.html
@@ -60,7 +60,7 @@
                 //Add your Azure Maps subscription key to the map SDK. Get an Azure Maps key at https://azure.com/maps
                 authOptions: {
                     authType: 'subscriptionKey',
-                    subscriptionKey: ''
+                    subscriptionKey: 'K8peo8i8RrfkRnXri17bDOPGbfW6AzyJ8Q9Si3aDifY'
                 },
                 style: "night",
                 center: [171.7799, -40.838875],
