update plane icon path

--- a/Web/index-realtime.html
+++ b/Web/index-realtime.html
@@ -34,7 +34,7 @@
             //Wait until the map resources are ready.
             map.events.add('ready', function () {
 
-                map.imageSprite.add('plane-icon', 'https://dtazfuncdemogsa.blob.core.windows.net/dt-azfuncdemo-blob/plane.png');
+                map.imageSprite.add('plane-icon', 'https://dtflightinfogsa.blob.core.windows.net/flightmapcontent/plane.png');
 
                 //Create a data source and add it to the map
                 datasource = new atlas.source.DataSource();
